scripts/resilience/manifests/cascading-failure-product-catalog.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: productcatalogservice
  namespace: default
spec:
  host: productcatalogservice.default.svc.cluster.local
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: v2
      name: v2
      trafficPolicy:
        outlierDetection:
          consecutive5xxErrors: 5
          interval: 10s
          baseEjectionTime: 40s
          maxEjectionPercent: 100
